// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CollectionCard Component > renders collection card snapshot 1`] = `
"<div data-v-a67a9f3f="" class="collection-card">
  <div data-v-a67a9f3f="" class="card-header">
    <h2 data-v-a67a9f3f="">Test Collection</h2>
    <p data-v-a67a9f3f="" class="description">A test collection description</p>
  </div>
  <div data-v-a67a9f3f="" class="song-list">
    <div data-v-a67a9f3f="" class="song-item">
      <div data-v-a67a9f3f="" class="song-info"><span data-v-a67a9f3f="" class="song-name">Song 1</span>
        <div data-v-a67a9f3f="" class="song-details"><span data-v-a67a9f3f="" class="composer">Composer 1</span><span data-v-a67a9f3f="" class="arranger">arr. Arranger 1</span></div>
      </div><button data-v-a67a9f3f="" class="btn btn-primary btn-sm">Add to Library</button>
    </div>
    <div data-v-a67a9f3f="" class="song-item">
      <div data-v-a67a9f3f="" class="song-info"><span data-v-a67a9f3f="" class="song-name">Song 2</span>
        <!--v-if-->
      </div><button data-v-a67a9f3f="" class="btn btn-primary btn-sm">Add to Library</button>
    </div>
  </div>
</div>"
`;

exports[`CollectionCard Component > renders collection card with imported songs snapshot 1`] = `
"<div data-v-a67a9f3f="" class="collection-card">
  <div data-v-a67a9f3f="" class="card-header">
    <h2 data-v-a67a9f3f="">Test Collection</h2>
    <p data-v-a67a9f3f="" class="description">A test collection description</p>
  </div>
  <div data-v-a67a9f3f="" class="song-list">
    <div data-v-a67a9f3f="" class="song-item imported">
      <div data-v-a67a9f3f="" class="song-info"><span data-v-a67a9f3f="" class="song-name">Song 1</span>
        <div data-v-a67a9f3f="" class="song-details"><span data-v-a67a9f3f="" class="composer">Composer 1</span><span data-v-a67a9f3f="" class="arranger">arr. Arranger 1</span></div>
      </div><button data-v-a67a9f3f="" class="btn btn-primary btn-sm" disabled="">Added</button>
    </div>
    <div data-v-a67a9f3f="" class="song-item">
      <div data-v-a67a9f3f="" class="song-info"><span data-v-a67a9f3f="" class="song-name">Song 2</span>
        <!--v-if-->
      </div><button data-v-a67a9f3f="" class="btn btn-primary btn-sm">Add to Library</button>
    </div>
  </div>
</div>"
`;
